# talentserv-ai-hackathon-group-11-backend-db

./: .env.example  .gitignore  .graphifyignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/: hooks.json  mcp.json.example
.cursor/hooks/: cache_cow_lib.py  lib.sh  post-file-cache.sh  post_file_cache.py  pre-compact.sh  pre-read.sh  pre-shell.helper.filter.sh  pre-shell.sh  pre_compact.py  pre_read.py  pre_shell.py  session-start.sh  session_start.py
.cursor/rules/: cache-cow.mdc  fresh-chat-on-topic-change.mdc
.github/workflows/: graphify.yml
.husky/: pre-commit
docs/: CACHE_COW.md  DEMO_QUICKSTART.md  HACKATHON_SUBMISSION.md  MCP_SETUP.md  TEAMS_INTEGRATION.md  WHATSAPP_DEMO.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  GRAPH_TREE.html  graph.html  graph.json  graph_tree.jsonl  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/memory/: query_20260525_115335_why_does_init_db_connect_database_initialization_t.md  query_20260525_115519_is_grok_giving_recommendations_for_mcp_office_leav.md
scripts/: bootstrap-graphify-mcp.ps1  bootstrap-graphify-mcp.sh  bootstrap-mcp.ps1  bootstrap-mcp.sh  bootstrap-office-leave-mcp.ps1  bootstrap-office-leave-mcp.sh  bootstrap_mcp.py  demo.ps1  export_graph_tree_jsonl.py  init_db.py  install-graphify-mcp.ps1  install-graphify-mcp.sh  install-office-leave-mcp.ps1  install-office-leave-mcp.sh  mcp_install_lib.py  mcp_launcher.py  md_to_pdf.py  sync_graphify_out.ps1  sync_graphify_out.sh
scripts/lib/: mcp_install_fetch.sh
sql/: schema.sql
src/: db.py  env.py  grok_client.py  init_db.py  mcp_enrichment.py  models.py  server.py
src/services/: api_client.py  teams_service.py
src/sql/: schema.sql  seed.sql
src/tools/: leave_tools.py
src/whatsapp/: __init__.py  auth.py  commands.py  formatters.py  handlers.py  twilio_webhook.py
tests/: test_grok_enrichment.py  test_tools.py  test_whatsapp_commands.py
