[project]
name = "talentserv-ai-hackathon-group-11-backend-db"
version = "1.0.0"
description = "Office Leave MCP (FastMCP, SQLite, Grok) plus graphify; one-curl Cursor bootstrap per MCP — see README and docs/MCP_SETUP.md"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
office-leave-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
