[project]
name = "talentserv-ai-hackathon-group-11-backend-db"
version = "1.0.0"
description = "Office Leave MCP (FastMCP, SQLite, Grok) plus graphify; clone-free curl install per MCP (no git clone) — see README and docs/MCP_SETUP.md"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
graphify = ["graphifyy[mcp]>=0.8.14"]
whatsapp = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "twilio>=9.0.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
office-leave-mcp = "src.server:main"
office-leave-init-db = "src.init_db:main"
office-leave-whatsapp = "src.whatsapp.twilio_webhook:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
